#127 - logo cropped issue fixed

--- a/wp-content/themes/indigo-wine/less/_home.less
+++ b/wp-content/themes/indigo-wine/less/_home.less
@@ -316,6 +316,15 @@ body{
 }
 
 
+@media screen and (min-width: 1450px){
+	.ind-custom-menu.fixed{
+		background-position: 13.3% 3px;
+		#logo{
+			height: 100px !important;
+		}
+	}
+}
+
 
 // Fixed section after header to get proper height for content
 
