--- a/wp-content/themes/indigo-wine/style.css
+++ b/wp-content/themes/indigo-wine/style.css
@@ -359,6 +359,14 @@ body {
     top: 5px;
   }
 }
+@media screen and (min-width: 1450px) {
+  .ind-custom-menu.fixed {
+    background-position: 13.3% 3px;
+  }
+  .ind-custom-menu.fixed #logo {
+    height: 100px !important;
+  }
+}
 .header-sep.fixedAdd {
   margin-top: 15.5em !important;
 }
